--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ theme: jekyll-theme-minimal
 
 title: Daniel Betancur
 description: Estudiante de Economía  
-logo: Imagen fondo blanco.png
+logo: Imagen fondo azul.png
 
 show_downloads: false
